--- a/src/components/Sections/Contact Sections/DefaultContact/DefaultContact.astro
+++ b/src/components/Sections/Contact Sections/DefaultContact/DefaultContact.astro
@@ -3,8 +3,8 @@ import InfoCard from "@components/Cards/Info/InfoCard.astro";
 import Container from "@components/Container.astro";
 import "./contact.css";
 
-const { title, info, location } = Astro.props;
-location.length <= 1 && location.map((loc: any) => loc=loc)
+const { title, info, location, operating_hours, social_links } = Astro.props;
+location.length <= 1 && location.map((loc: any) => (loc = loc));
 ---
 
 <div class="default_contact container" id="contact" data-highlight="true">
@@ -15,16 +15,24 @@ location.length <= 1 && location.map((loc: any) => loc=loc)
         >
             <article>
                 <h2>{title}</h2>
-                <InfoCard cards={info} />
+                <address class="contact_info">
+                    <InfoCard cards={info} />
+                </address>
+                <div class="social_links">
+                    <InfoCard cards={social_links} />
+                </div>
+                <div class="working_hours">
+                    <InfoCard cards={[operating_hours]} />
+                </div>
             </article>
-            
+
             <div class="default_contact__location">
                 {
                     location.map((location: any) => (
-                        <address class="location">
-                            <slot set:html={location.content} />
+                        <div class="location">
+                            <address set:html={location.content} />
                             <slot set:html={location.title} />
-                        </address>
+                        </div>
                     ))
                 }
             </div>
