--- a/src/components/Sections/Contact Sections/DefaultContact/contact.css
+++ b/src/components/Sections/Contact Sections/DefaultContact/contact.css
@@ -5,15 +5,15 @@
 .default_contact__content[data-two-column="true"] {
     display: grid;
     grid-template-rows: repeat(2, auto);
-    gap: var(--size-8);
+    gap: var(--size-4);
 }
 .default_contact__location {
-    border-top: 2px solid var(--clr-neutral-400);
-    padding-top: var(--size-8);
+    border-top: 2px solid var(--clr-primary-dark);
+    padding-top: var(--size-6);
 }
 .default_contact__location .location {
     display: grid;
-    grid-template-rows: 1fr 300px;
+    grid-template-rows: repeat(2, auto);
     align-items: center;
     gap: var(--size-4);
 
@@ -21,4 +21,15 @@
 
 .default_contact__location > * {
     height: 100%;
+}
+
+.default_contact__location .location iframe {
+    min-height: 300px;
+}
+
+.social_links,
+.working_hours {
+    padding-top: var(--size-4);
+    margin-top: var(--size-4);
+    border-top: 2px solid var(--clr-primary-dark);
 }
